--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Acme&family=Patrick+Hand&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+	<link rel="stylesheet" href="style.css" />
   	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>		
 	<style type="text/css">
@@ -301,7 +302,7 @@
 		<div class="row justify-content-center align-items-center min-vh-100">
 			<div class="col-lg-5 text-center padding">
 				<div class="box" data-aos="flip-left">
-				<span class="fs-6">12.01.23</span><br/>
+				<span class="fs-6">13.01.23</span><br/>
 				<small class="fst-italic" data-aos="zoom-in" data-aos-duration="500">"Setelah perjalanan yang panjang"</small>
 				<h1 class="fw-semibold p-0 fs-4" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500">Selamat <span class="font-h1-style fw-bold fs-1">1/3</span> Zahh<span class="material-symbols-outlined icon">auto_awesome</span></h1>
 				<p class="font-p-style" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">*Btw, selamat menempuh chapter 2 dari 3 chapter drama kelulusan hehe</p>
