--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<small class="fst-italic" data-aos="zoom-in" data-aos-duration="500">"Setelah perjalanan yang panjang"</small>
 				<h1 class="fw-semibold p-0 fs-4" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500">Selamat <span class="font-h1-style fw-bold fs-1">1/3</span> Zahh<span class="material-symbols-outlined icon">auto_awesome</span></h1>
 				<p class="font-p-style" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">*Btw, selamat menempuh chapter 2 dari 3 chapter drama kelulusan hehe</p>
+				<p class="px-2 text-danger fw-bold" id="text" style="display: none;">Love MySelf - BTS</p>
 				</div>								
 			</div>
 			<div class="col-lg-2" id="display">
@@ -64,12 +65,14 @@
 
 var x = document.getElementById("audio");
 var y = document.getElementById("btn");
-var z = document.getElementById("display")
+var z = document.getElementById("display");
+var b = document.getElementById("text");
 function enableAutoplay() { 
   x.autoplay = true;
   x.load();
   y.remove();
   z.style.display = 'none';
+  b.style.display = 'inline';
 }
 
 </script>    
