--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<small class="fst-italic" data-aos="zoom-in" data-aos-duration="500">"Setelah perjalanan yang panjang"</small>
 				<h1 class="fw-semibold p-0 fs-4" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500">Selamat <span class="font-h1-style fw-bold fs-1">1/3</span> Zahh<span class="material-symbols-outlined icon">auto_awesome</span></h1>
 				<p class="font-p-style" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">*Btw, selamat menempuh chapter 2 dari 3 chapter drama kelulusan hehe</p>
-				<p class="px-2 text-danger fw-bold" id="text" style="display: none;">Love MySelf - BTS</p>
+				<p class="px-2 text-danger fw-bold" id="text" style="display: none;" >Spesial buat azizah :v</p>
 				</div>								
 			</div>
 			<div class="col-lg-2" id="display">
@@ -29,12 +29,11 @@
 			        <source src="Answer _ Love Myself.mp3" type="audio/mpeg">
 			    </audio>
 
-			    <button type="button" id="btn" class="btn btn-warning rounded-5 z-1 position-absolute" onclick="enableAutoplay()">Klik Me</button>
+			    <button type="button" id="btn" class="btn btn-warning rounded-5 z-1 position-absolute" onclick="enableAutoplay(); setTimeout(editText, 3000);">Klik Me</button>
 			    </div>
 			</div>	
-			<div class="col-lg-5 text-center">
-				<img class="img-fluid" src="image.png" id="img-first">
-				<img class="img-fluid w-75" src="image-bts.png" id="img-bts" style="display: none;">
+			<div class="col-lg-5 text-center" id="img-bts">
+				<img class="img-fluid" src="image.png" id="img-first" data-aos="zoom-in-up" data-aos-delay="500" data-aos-duration="1000">				
 			</div>		
 		</div>
 		<ul class="circles">
@@ -78,9 +77,13 @@ function enableAutoplay() {
   y.remove();
   z.style.display = 'none';
   b.style.display = 'inline';
-  c.style.display = 'inline';
-  d.style.display = 'none';
-  e.style.display = 'inline';
+}
+
+function editText() {
+	b.innerHTML = 'Love MySelf - BTS';
+	d.style.display = 'none';
+	c.innerHTML ='<img class="img-fluid w-75" src="image-bts.png" data-aos="fade-left" data-aos-duration="500">'
+	e.style.display = 'inline';	
 }
 
 </script>    
