--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@ function enableAutoplay() {
 
 function editText() {
 	b.innerHTML = 'Love MySelf - BTS';
-	// d.setAttribute('data-aos','zoom-out');
-	// d.setAttribute('data-aos-duration','1000');
 	c.innerHTML ='<img class="img-fluid w-75" src="image-bts.png" data-aos="fade-left" data-aos-delay="5000" data-aos-duration="1000">'
+	d.style.display = 'none'
 	e.style.display = 'inline';	
 }
 
