--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
-	<div class="container-fluid area px-3" id="bird">
+	<div class="container-fluid area px-3 fixed-top">
 		<div class="row justify-content-center align-items-center min-vh-100">
 			<div class="col-lg-5 text-center padding">
 				<div class="box" data-aos="flip-left">
