--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
-	<div class="container-fluid area px-3 fixed-top">
+	<div class="container-fluid area">
 		<div class="row justify-content-center align-items-center min-vh-100">
 			<div class="col-lg-5 text-center padding">
 				<div class="box" data-aos="flip-left">
@@ -82,7 +82,7 @@ function enableAutoplay() {
 
 function editText() {
 	b.innerHTML = 'Love MySelf - BTS';
-	c.innerHTML ='<img class="img-responsive w-75 pb-3" src="image-bts.png" data-aos="fade-left" data-aos-delay="5000" data-aos-duration="1000">'
+	c.innerHTML ='<img class="img-responsive w-75 pb-5" src="image-bts.png" data-aos="fade-left" data-aos-delay="5000" data-aos-duration="1000">'
 	d.style.display = 'none'
 	e.style.display = 'inline';	
 }
