--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function enableAutoplay() {
 
 function editText() {
 	b.innerHTML = 'Love MySelf - BTS';
-	c.innerHTML ='<img class="img-fluid" src="image-bts.png" data-aos="zoom-in" data-aos-delay="5000" data-aos-duration="1000">'
+	c.innerHTML ='<img class="img-fluid p-3" src="image-bts.png" data-aos="zoom-in" data-aos-delay="5000" data-aos-duration="1000">'
 	d.style.display = 'none'
 	e.style.display = 'inline';	
 }
