--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<span class="fs-6">13.01.23</span><br/>
 				<small class="fst-italic" data-aos="zoom-in" data-aos-duration="500">"Setelah perjalanan yang panjang"</small>
 				<h1 class="fw-semibold p-0 fs-4" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500">Selamat <span class="font-h1-style fw-bold fs-1">1/3</span> Zahh<span class="material-symbols-outlined icon">auto_awesome</span></h1>
-				<p class="font-p-style" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">*Btw Semangat!, tinggal 2 chapter lagi menuju kelulusan <i class="bi bi-hearts"></i></p>
+				<p class="font-p-style" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="500">*Btw selamat menuju ke tahap selanjutnya, dari 3 tahap menuju kelulusan <i class="bi bi-hearts"></i></p>
 				<p class="px-2 text-danger fw-bold" id="text" style="display: none;" >Spesial buat azizah :v</p>
 				</div>								
 			</div>
